# zex

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE  Makefile  README.md  compile_commands.json  zex
Compiler/: bytecode.c  bytecode.h  compiler.c  compiler.h  symtable.c  symtable.h
Core/: common.h  error.c  error.h  memory.c  memory.h  utf8.c  utf8.h
Docs/: built-in-functions.md  language-reference.md  standard-types.md
Examples/: arrays.zex  classes.zex  control_flow.zex  exceptions.zex  hello.zex  inheritance.zex  tuples.zex
Modules/: builtins.c  builtins.h
Objects/: arrayobject.c  arrayobject.h  boolobject.c  boolobject.h  classobject.c  classobject.h  exceptionobject.c  exceptionobject.h  floatobject.c  floatobject.h  funcobject.c  funcobject.h  intobject.c  intobject.h  nullobject.c  nullobject.h  object.c  object.h  stringobject.c  stringobject.h  tableobject.c  tableobject.h  tupleobject.c  tupleobject.h
Parser/: ast.c  ast.h  lexer.c  lexer.h  parser.c  parser.h  token.c  token.h
Programs/: main.c
Runtime/: frame.c  gc.c  vm.c  vm.h
examples/: arrays.zex  classes.zex  control_flow.zex  fibonacci.zex  functions.zex  hello.zx  inheritance.zex  loops.zex  simple.zex  strings.zex  test.zex  variables.zex
include/zex/: ast.hpp  codegen.hpp  elf.hpp  error.hpp  lexer.hpp  parser.hpp  semantic.hpp  token.hpp  x86_64.hpp
src/: codegen.cpp  elf.cpp  lexer.cpp  main.cpp  parser.cpp  semantic.cpp  x86_64.cpp
